--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "vite": "^5.3.4"
   },
   "dependencies": {
+    "@suprsend/react-inbox": "^3.2.0",
+    "@suprsend/web-inbox": "^0.3.0",
     "three": "^0.167.1"
   }
 }
